# thread-it

./: .dockerignore  .env.example  .gitignore  CNAME  Dockerfile  LICENSE  README.md  bot.py  config.py  docker-compose.prod.yml  docker-compose.yml  lefthook.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-website.yml  docker.yml
docs/: CONTRIBUTING.md  DEPLOYMENT.md  DESIGN_SPECIFICATION.md  TROUBLESHOOTING.md  design-specification.md
tests/: conftest.py  test_attachments.py  test_bot_helpers.py  test_bot_wiring.py  test_config.py  test_orchestrator.py  test_permissions.py  test_types_and_cog.py
threadit/: __init__.py  attachments.py  cog.py  orchestrator.py  permissions.py  types.py
website/: biome.json  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
website/src/: App.tsx  index.css  main.tsx
website/src/components/: DocsFooter.tsx  DocsLayout.tsx  Features.tsx  Footer.tsx  Hero.tsx  HeroDemo.tsx  HowItWorks.tsx  Setup.tsx
website/src/components/icons/: GithubIcon.tsx
website/src/pages/: Home.tsx
