[project]
name = "thread-it"
version = "0.1.0"
description = "Discord bot that converts message replies into organized public threads."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
authors = [{ name = "Wei He" }]
dependencies = [
    "discord.py>=2.7.1",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.13",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/wei/thread-it"
Issues = "https://github.com/wei/thread-it/issues"

[project.scripts]
thread-it = "bot:main"

[tool.setuptools]
py-modules = ["bot", "config"]
packages = ["threadit"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line length handled by formatter; long strings in user-facing copy are fine
    "B008",  # function call in default arg (discord.py uses sentinel objects)
]

[tool.mypy]
python_version = "3.13"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true
# discord.py ships its own stubs; don't fail on third-party untyped libs.
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["-ra", "--strict-markers"]
filterwarnings = [
    "error",
    # discord.py emits an audioop DeprecationWarning on import under 3.13; out of our control.
    "ignore::DeprecationWarning:discord",
]
